<resources>
    <string name="app_name">Utopia Engine</string>
    <string name="action_settings">Settings</string>
    <string name="action_rules">Rules</string>
    <!-- Main menu screen -->
    <string name="utopia_engine">Utopia Engine</string>
    <string name="new_game">New Game</string>
    <string name="continue_game">Continue</string>
    <string name="leaderboard">Leaderboard</string>
    <!-- Wilderness screen -->
    <string name="halebeard_peak">Halebeard Peak</string>
    <string name="construct_seal_of_balance">Construct: Seal of Balance</string>
    <string name="component_silver">Component: Silver</string>
    <string name="treasure_ice_plate">Treasure: Ice Plate</string>

    <string name="the_great_wilds">The Great Wilds</string>
    <string name="root_strangled_marshes">Roots Strangled Marshes</string>
    <string name="glassrock_canyon">Glassrock Canyon</string>
    <string name="ruined_city_of_the_ancients">Ruined City of the Ancients</string>
    <string name="the_fiery_maw">The Fiery Maw</string>

    <string name="minus_one">-1</string>
    <string name="box_hint">1-6</string>

</resources>